# knowledge-agent

./: .gitignore  Makefile  README.md  app.py  config.py  exceptions.py  generator.py  ingest.py  main.py  models.py  ocr.py  pyproject.toml  retriever.py  store.py  streamlit_app.py
.streamlit/: config.toml
data/: ingested.txt
tests/: conftest.py  test_ingest.py  test_retriever.py
