[project]
name = "knowledge-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "fastapi>=0.135.3",
    "openai>=2.30.0",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pillow>=12.2.0",
    "pydantic-settings>=2.13.1",
    "pyobjc-framework-vision>=12.1",
    "requests>=2.33.1",
    "rich>=14.3.3",
    "streamlit>=1.56.0",
    "typer>=0.24.1",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
